@@ -4716,7 +4716,6 @@
     "dfs.journalnode.http-address" : "0.0.0.0:8480",
     "mapreduce.job.acl-view-job" : " ",
     "mapreduce.reduce.shuffle.retry-delay.max.ms" : "60000",
-    "yarn.ipc.serializer.type" : "protocolbuffers",
     "mapreduce.job.end-notification.max.retry.interval" : "5",
     "ftp.blocksize" : "67108864",
     "mapreduce.tasktracker.http.threads" : "80",
@@ -4841,7 +4840,7 @@
     "yarn.ipc.rpc.class" : "org.apache.hadoop.yarn.ipc.HadoopYarnProtoRPC",
     "mapreduce.job.name" : "TeraGen",
     "kfs.blocksize" : "67108864",
-    "yarn.resourcemanager.application-tokens.master-key-rolling-interval-secs" : "86400",
+    "yarn.resourcemanager.am-rm-tokens.master-key-rolling-interval-secs" : "86400",
     "mapreduce.job.ubertask.maxmaps" : "9",
     "yarn.scheduler.maximum-allocation-mb" : "8192",
     "yarn.nodemanager.heartbeat.interval-ms" : "1000",
@@ -9830,7 +9829,6 @@
     "dfs.journalnode.http-address" : "0.0.0.0:8480",
     "mapreduce.job.acl-view-job" : " ",
     "mapreduce.reduce.shuffle.retry-delay.max.ms" : "60000",
-    "yarn.ipc.serializer.type" : "protocolbuffers",
     "mapreduce.job.end-notification.max.retry.interval" : "5",
     "ftp.blocksize" : "67108864",
     "mapreduce.tasktracker.http.threads" : "80",
@@ -9955,7 +9953,7 @@
     "yarn.ipc.rpc.class" : "org.apache.hadoop.yarn.ipc.HadoopYarnProtoRPC",
     "mapreduce.job.name" : "TeraGen",
     "kfs.blocksize" : "67108864",
-    "yarn.resourcemanager.application-tokens.master-key-rolling-interval-secs" : "86400",
+    "yarn.resourcemanager.am-rm-tokens.master-key-rolling-interval-secs" : "86400",
     "mapreduce.job.ubertask.maxmaps" : "9",
     "yarn.scheduler.maximum-allocation-mb" : "8192",
     "yarn.nodemanager.heartbeat.interval-ms" : "1000",
